/**
 * @jest-environment jsdom
 */
import * as React from "react";
import { render, cleanup } from "@testing-library/react";
import { renderHook, act } from "@testing-library/react-hooks";
import { Mirror, useMirror } from "../src";

describe("Hook", (): void => {
    it("returns an empty reflection", (): void => {
        const { result } = renderHook(() => useMirror());
        const [, reflection] = result.current;
        expect(reflection).toMatchSnapshot();
    });

    it("starts reflecting node", (): void => {
        const { result } = renderHook(() =>
            useMirror({ className: "test-mirror" }),
        );
        const [ref] = result.current;
        act(() => void ref(document.createElement("div")));
        const [, reflection] = result.current;
        expect(reflection).toMatchSnapshot();
    });
});

describe("Component", (): void => {
    const spyMathRandom = jest.spyOn(Math, "random");
    beforeEach(() => {
        spyMathRandom.mockReturnValueOnce(0.123456789);
    });
    afterEach(() => {
        jest.clearAllMocks();
        cleanup();
    });
    afterAll(jest.restoreAllMocks);

    it("frames an empty reflection", (): void => {
        const result = render(<Mirror className="test-mirror-frame" />);
        expect(result.baseElement).toMatchSnapshot();
    });

    it("renders reflection with styles", async () => {
        spyMathRandom.mockReturnValueOnce(0.123456789);
        /** add document style */
        const domStyle = document.createElement("style");
        document.head.appendChild(domStyle);
        domStyle.innerHTML = `
            @charset "utf-8";
            @font-face {
                font-family: "Open Sans";
            }
            body, .mirrorFrame:not(*) {
                font-family: "san-serif";
                font-size: 1.2em;
            }
            :is(::after), ::before {
                position: absolute;
            }
            :where(::slotted(span)) {
                border: none;
            }
            ::after {
                content: '';
            }
            .mirrorFrame::before {
                content: 'mock text';
            }
            .class1.one, .class2.two {
                height: 10px;
            }
            .class2.two {
                font-size: 1.3em;
                display: block;
                width: 40px;
                margin: 0 auto;
            }
            .class3.three::after {
                background: red;
                width: 5px;
                height: 5px;
            }
            .class1.one[attr^="[val"] .class2.two {
                width: 20px;
            }
        `;
        /** add nodes that will be mirrored */
        const domNode = document.createElement("div");
        document.body.appendChild(domNode);
        const node1 = document.createElement("div");
        domNode.appendChild(node1);
        node1.className = "class1 one";
        node1.setAttribute("attr", "[value");
        const node2 = document.createElement("span");
        node1.appendChild(node2);
        node2.className = "class2 two";
        /** render mirror into detached node */
        const baseElement = document.createElement("div");
        const renderProps = { className: "mirrorFrame", reflect: domNode };
        const result = render(<Mirror {...renderProps} />, { baseElement });
        expect(result.baseElement).toMatchSnapshot();
        /** clean up */
        domStyle.remove();
        domNode.remove();
    });
});
