// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component frames an empty reflection 1`] = `
<body>
  <div>
    <iframe
      class="test-mirror-frame"
      id="4fzzzxj"
    />
  </div>
</body>
`;

exports[`Component renders reflection with styles 1`] = `
<div>
  <div>
    <iframe
      class="mirrorFrame"
      id="4fzzzxj"
    />
  </div>
</div>
`;

exports[`Hook returns an empty reflection 1`] = `<Mirror />`;

exports[`Hook starts reflecting node 1`] = `
<Mirror
  className="test-mirror"
  reflect={<div />}
/>
`;
